--- a/crates/ws-receiver/Cargo.toml
+++ b/crates/ws-receiver/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 ws-common = { path = "../ws-common" }
+tokio = { workspace = true }
+tokio-tungstenite = { workspace = true }
+futures = { workspace = true }
+log = { workspace = true }
