--- a/crates/ws-common/Cargo.toml
+++ b/crates/ws-common/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-tungstenite = { workspace = true }
+url = { workspace = true }
