update readme, impl walk dir on sender, improve common crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.32", features = ["full"] } # FIXME: full?
 tokio-tungstenite = "0.20"
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.10"
