--- a/crates/ws-receiver/Cargo.toml
+++ b/crates/ws-receiver/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { workspace = true }
 tokio-tungstenite = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
+walkdir = { workspace = true }
