impl sender main logic

--- a/crates/ws-sender/Cargo.toml
+++ b/crates/ws-sender/Cargo.toml
@@ -11,3 +11,5 @@ futures = { workspace = true }
 log = { workspace = true }
 url = { workspace = true }
 walkdir = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
