--- a/crates/ws-common/Cargo.toml
+++ b/crates/ws-common/Cargo.toml
@@ -8,5 +8,5 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-tungstenite = { workspace = true }
 url = { workspace = true }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { workspace = true }
+serde_json = { workspace = true }
