--- a/crates/ws-receiver/Cargo.toml
+++ b/crates/ws-receiver/Cargo.toml
@@ -10,3 +10,5 @@ tokio-tungstenite = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
 walkdir = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
