--- a/crates/ws-common/Cargo.toml
+++ b/crates/ws-common/Cargo.toml
@@ -10,3 +10,5 @@ tokio-tungstenite = { workspace = true }
 url = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+walkdir = { workspace = true }
+log = { workspace = true }
